crates/taudit-cli/tests/snapshots/snapshot_gha__gha_propagation_sarif_results.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
assertion_line: 193
expression: results
---
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "GITHUB_TOKEN reaches 5 sinks via authority propagation: \\[actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29, actions/upload-artifact@v4, release-bundle, actions/download-artifact@v4, untrusted-org/publish-action@main\\]"
  partialFingerprints:
    primaryLocationLineHash: 4c049f68139514095dad695181c62c92
    taudit/v1: 4c049f68139514095dad695181c62c92
  properties:
    findingGroupId: 8b13aa4e-7e99-5faa-968a-b0ef649d5564
    security-severity: "9.0"
    taudit-source: built-in
  ruleId: authority_propagation
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: PUBLISH_API_KEY propagated to untrusted-org/publish-action@main across trust boundary
  partialFingerprints:
    primaryLocationLineHash: 3491ce71198b1b56a1020418f6b6428e
    taudit/v1: 3491ce71198b1b56a1020418f6b6428e
  properties:
    findingGroupId: ba41b317-cbc5-5930-8db1-5d32206f77cf
    security-severity: "9.0"
    taudit-source: built-in
  ruleId: authority_propagation
- level: note
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "'PUBLISH_API_KEY' looks like a long-lived static credential"
  partialFingerprints:
    primaryLocationLineHash: 3c05dbb7db29cbc62510bd07234bd8b3
    taudit/v1: 3c05dbb7db29cbc62510bd07234bd8b3
  properties:
    findingGroupId: 6426415f-731a-53a8-b2e4-59bf5baccb9b
    security-severity: "2.0"
    taudit-source: built-in
    timeToFix: large
  ruleId: long_lived_credential
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "GITHUB_TOKEN has broad scope \\(permissions: 'write-all'\\) — likely broader than needed"
  partialFingerprints:
    primaryLocationLineHash: f40be29c0ec732f891a8b218b539588e
    taudit/v1: f40be29c0ec732f891a8b218b539588e
  properties:
    findingGroupId: c629fa7f-412c-5537-83e3-f9598919f901
    security-severity: "7.5"
    taudit-source: built-in
    timeToFix: small
  ruleId: over_privileged_identity
- level: warning
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: actions/download-artifact@v4 is not pinned to a SHA digest
  partialFingerprints:
    primaryLocationLineHash: c3afb6b577929fd0032c301d0bedb071
    taudit/v1: c3afb6b577929fd0032c301d0bedb071
  properties:
    findingGroupId: 84413533-33fe-5b90-8720-964551200e36
    security-severity: "5.0"
    taudit-source: built-in
    timeToFix: trivial
  ruleId: unpinned_action
- level: warning
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: actions/upload-artifact@v4 is not pinned to a SHA digest
  partialFingerprints:
    primaryLocationLineHash: 78bff5f6e502269cc980f4ad23d62ba3
    taudit/v1: 78bff5f6e502269cc980f4ad23d62ba3
  properties:
    findingGroupId: bca918de-19f7-58da-ae2e-61f12191a56b
    security-severity: "5.0"
    taudit-source: built-in
    timeToFix: trivial
  ruleId: unpinned_action
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: untrusted-org/publish-action@main is not pinned to a SHA digest
  partialFingerprints:
    primaryLocationLineHash: a87f5766f57accf0393176d72eb23f86
    taudit/v1: a87f5766f57accf0393176d72eb23f86
  properties:
    findingGroupId: 261a4277-eaf7-511e-9c1c-f47fdd7bd620
    security-severity: "7.5"
    taudit-source: built-in
    timeToFix: trivial
  ruleId: unpinned_action
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "Untrusted step 'build\\[2\\]' has direct access to identity 'GITHUB_TOKEN'"
  partialFingerprints:
    primaryLocationLineHash: c86dc7d595e4239cd2ed6ea9deafa290
    taudit/v1: c86dc7d595e4239cd2ed6ea9deafa290
  properties:
    findingGroupId: 5e958af4-f19d-5ac6-be09-2305f0d9b95f
    security-severity: "9.0"
    taudit-source: built-in
  ruleId: untrusted_with_authority
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "Untrusted step 'publish\\[0\\]' has direct access to identity 'GITHUB_TOKEN'"
  partialFingerprints:
    primaryLocationLineHash: 5ed638c8ae853fe1fdb2f25c3dc36429
    taudit/v1: 5ed638c8ae853fe1fdb2f25c3dc36429
  properties:
    findingGroupId: b7e5793c-2947-56b9-bedf-cd675c8ec420
    security-severity: "9.0"
    taudit-source: built-in
  ruleId: untrusted_with_authority
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "Untrusted step 'publish\\[1\\]' has direct access to identity 'GITHUB_TOKEN'"
  partialFingerprints:
    primaryLocationLineHash: 9b5a3597ba20260b9b44b003091941a8
    taudit/v1: 9b5a3597ba20260b9b44b003091941a8
  properties:
    findingGroupId: 13b169f7-d22b-595c-86ce-7907ca3e6781
    security-severity: "9.0"
    taudit-source: built-in
  ruleId: untrusted_with_authority
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "Untrusted step 'publish\\[1\\]' has direct access to secret 'PUBLISH_API_KEY'"
  partialFingerprints:
    primaryLocationLineHash: 576c2dd5a7622210fdb7f2220518b0aa
    taudit/v1: 576c2dd5a7622210fdb7f2220518b0aa
  properties:
    findingGroupId: 1c27d04f-2dbc-5865-a0ac-48c941d4c6f8
    security-severity: "9.0"
    taudit-source: built-in
  ruleId: untrusted_with_authority
- level: note
  locations:
    - physicalLocation:
        artifactLocation:
          uri: test.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "5 step\\(s\\) use OIDC/federated identity but no provenance attestation step was detected — artifact integrity cannot be verified"
  partialFingerprints:
    primaryLocationLineHash: 808fed89037072f475af655be504c6fa
    taudit/v1: 808fed89037072f475af655be504c6fa
  properties:
    findingGroupId: a1606386-f469-5376-a699-23801a687970
    security-severity: "0.1"
    taudit-source: built-in
  ruleId: uplift_without_attestation
