crates/taudit-cli/tests/snapshots/snapshot_gha__gha_prt_finding_5.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: critical
category: script_injection_via_untrusted_context
nodes_involved:
  - 3
message: "Step 'check[1]' interpolates attacker-controlled expression(s) ${{ github.event.pull_request.title }} directly into a script body without an env: indirection — classic GitHub Actions RCE"
recommendation:
  type: manual
  action: "Bind the expression to a step-level `env:` variable and reference it as `\"$VAR\"` (shell) or `process.env.VAR` (JS). The runtime then quotes the value as data instead of YAML-rendering it as code."
source: built-in
confidence_scope: yaml_only
attacker_surface_kinds:
  - script_sink
  - untrusted_step
cve_relationship: analogue_only
