crates/taudit-cli/tests/snapshots/snapshot_gha__gha_prt_finding_6.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: critical
category: trigger_context_mismatch
nodes_involved:
  - 2
  - 3
  - 0
message: Workflow triggered by pull_request_target with secret/identity access — 2 step(s) hold authority that attacker-controlled code could reach
recommendation:
  type: manual
  action: "Use a separate workflow triggered by workflow_run (not pull_request_target) for privileged operations, or ensure no checkout of the PR head ref occurs before secret use"
source: built-in
confidence_scope: yaml_only
runtime_preconditions:
  - the authority shown in the graph is available to that run
  - untrusted PR or fork-controlled input can reach this workflow at runtime
authority_kinds:
  - oidc_identity
attacker_surface_kinds:
  - script_sink
  - untrusted_checkout
  - untrusted_step
cve_relationship: same_authority_shape
