crates/taudit-cli/tests/snapshots/snapshot_gha__gha_prt_finding_7.snap
---
source: crates/taudit-cli/tests/snapshot_gha.rs
expression: finding
---
severity: critical
category: untrusted_with_authority
nodes_involved:
  - 2
  - 0
message: "Untrusted step 'check[0]' has direct access to identity 'GITHUB_TOKEN'"
recommendation:
  type: reduce_permissions
  current: write-all
  minimum: minimal required scope
source: built-in
